Viewport fix + ProjectList testing
Corrected content extending past screen limits

Added multiple sample items into project list to test scaling and scrolling
- Currently using default scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400&display=swap');
 
 .App {
+  box-sizing: border-box;
   text-align: center;
   font-family: 'Raleway', 'Ubuntu Mono', monospace;
-  margin: 5px 10px;
+  /* margin: 5px 10px; */
+  /* padding: 5px; */
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+
+  display: grid;
+  grid-template-rows: 12% 88%;
+  grid-template-areas:
+    "header"
+    "content";
+}
+
+.headerContainer {
+  grid-area: header;
+}
+
+.contentContainer {
+  grid-area: content;
+  padding-bottom: 10px;
 }
