--- a/src/Header.css
+++ b/src/Header.css
@@ -8,7 +8,7 @@ button {
 
 #headerContainer {
   min-height: 75px;
-  max-height: 100px;
+  max-height: 100%;
   width: 100%;
   border-bottom: 5px solid aliceblue;
   padding: 0;
